--- a/src/components/MediaHighlights/Media.css
+++ b/src/components/MediaHighlights/Media.css
@@ -130,18 +130,7 @@
     transform: rotate(-45deg);
     top: 2px;
 }
-/* .vertical__line::before{
-    position: absolute;
-    width: 45px;
-    height: 10px;
-    border-top: 0px solid #A3C891;
-    border-right: 0px solid #A3C891;
-    border-bottom: 2px solid #A3C891;
-    border-left: 0px solid #A3C891;
-    left: calc(var(--left) - 16px);
-    content: '';
-    margin-top: -12px;
-} */
+
 .media__cards {
     margin-top: 2%;
     display: flex;
@@ -166,7 +155,8 @@
         gap: 10px;
     }.media__header > button {
         font-size: 12px;
-        width: 100px;
+        min-width: 25%;
+        max-width: 150px;
         height: 25px;
     }
     .arrow__indicator {
@@ -183,93 +173,4 @@
         left:  3.532197977647685vw;
     
     }
-    
 }
-/* @media screen and (max-width: 560px) {
-    .media__cards {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-    }
-    .media__header {
-        display: flex;
-        justify-content: space-evenly;
-        padding-left: 50px;
-        padding-right: 50px;
-        align-items: center;
-    }
-    .media__header > h1 {
-        width: 395px;
-        height: 43px;
-        font-family: 'Futura PT', sans-serif;
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 100.26%;
-        
-    
-        text-transform: uppercase;
-    
-        color: #5F5F5F;
-    }
-    .headers{ 
-        margin-left: 4rem;
-        display: flex;
-        justify-content: center;
-        width: 90px;
-        gap:0px;
-        align-items: center;
-  
-    
-    
-        color: #747272;
-    }
-    .headers > h1 {
-        font-family: 'Futura PT', sans-serif;
-        font-style: normal;
-        font-weight: 700;
-        font-size: 12px;
-        margin-bottom: 0;
-        margin-left: 20px;
-    }
-    .headers > h1:nth-child(2) {
-        font-family: 'Futura PT', sans-serif;
-        font-style: normal;
-        font-weight: 700;
-        font-size: 12px;
- 
-    
-    
-        color: #A3C891;
-    }
-    .vertical__line {
-        position: relative;
-        width: 350px;
-        height: 11px;
-        left: 60px;
-        border: none;
-    }
-    .media__header > button {
-        align-items: center;
-        text-align: center;
-        width: 120px;
-        height: 51px;
-        font-family: 'Futura PT', sans-serif;
-        font-style: normal;
-        font-weight: 700;
-        font-size: 12px;
-        line-height: 102.26%;
-    
-    
-    
-    
-        color: #FFFFFF;
-    
-    
-        border: transparent;
-        background: #A3C891;
-        border-radius: 6px;
-    }
-  } */
